<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">glucoreview</string>
    
    <!-- 日付 -->
    <string name="date_format_yyyy_mm_dd_with_day_of_week">yyyy年MM月dd日(E)</string>
    <string name="date_format_mm_dd">MM月dd日</string>

    <!-- 共通 -->
    <string name="do_fix">修正する</string>
    <string name="percent">%</string>
    <string name="number_of_human">名</string>
    <string name="th">位</string>
    <string name="month">月</string>
    <string name="slash">/</string>

    <!-- Bottom Bar Title -->
    <string name="title_home">ホーム</string>
    <string name="title_diary">トーク</string>
    <string name="title_review">カレンダー</string>
    <string name="title_discussion">ナース相談</string>

    <!-- ログイン画面 -->
    <string name="login_title">Login</string>
    <string name="login_id">ID</string>
    <string name="login_id_placeholder">ログインID</string>
    <string name="login_pass">PASSWORD</string>
    <string name="login_pass_placeholder">パスワード</string>
    <string name="login_button_title">LOGIN</string>

    <!-- 設定 -->
    <string name="setting_title">設定</string>
    <string name="setting_how_to_blood_collection">採血方法の動画はこちらをタップ</string>

    <string name="setting_id">ユーザID: %1s</string>
    <string name="setting_office">事業所名称: %1s</string>
    <string name="setting_insurance">保険者名称: %1s</string>
    <string name="setting_blood_collection_method">採血方法(動画)</string>
    <string name="setting_learning_content">学習コンテンツ</string>

    <string name="setting_notification_from_pvg">glucoreviewからのお知らせ</string>
    <string name="setting_blood_kit_register">採血キットの登録</string>
    <string name="setting_notification_setting">通知通知</string>
    <string name="setting_model_change">機種変更</string>
    <string name="setting_contact_information">お問い合わせ</string>
    <string name="setting_terms_of_service">利用規約</string>
    <string name="setting_privacy_setting">プライバシーポリシー</string>

    <!-- ホーム画面 -->
    <string name="main_setting_btn">設定</string>
    <string name="main_week_target_title">今週の目標</string>

    <string name="main_company_ranking_title">社内ランキング</string>
    <string name="main_continuation_rate_title">GA継続率</string>
    <string name="main_diary_rate_title">ダイアリー継続率</string>
    <string name="main_obtain_gold_title">ゴールド獲得数</string>
    <string name="main_graph_of_fluctuating_value_title">GA値変動グラフ</string>
    <string name="main_number_of_display_title">表示件数</string>
    <string name="main_last_3_month_title">直近3ヶ月</string>
    <string name="main_last_6_month_title">直近6ヶ月</string>
    <string name="main_last_12_month_title">直近12ヶ月</string>
    <string name="main_last_all_month_title">すべて</string>

    <!-- トーク -->
    <string name="talk_diary_entry_title">ダイアリー記入</string>
    <string name="talk_nurse_consultation_title">ナース相談</string>

    <!-- カレンダー -->
    <string name="calendar_button_title_online_reserve">オンライン面談予約</string>
    <string name="calendar_button_title_value_register">HbA1c値登録</string>


    <string name="material_calendar_monday">月</string>
    <string name="material_calendar_tuesday">火</string>
    <string name="material_calendar_wednesday">水</string>
    <string name="material_calendar_thursday">木</string>
    <string name="material_calendar_friday">金</string>
    <string name="material_calendar_saturday">土</string>
    <string name="material_calendar_sunday">日</string>

    <array name="material_calendar_months_array">
        <item>1月</item>
        <item>2月</item>
        <item>3月</item>
        <item>4月</item>
        <item>5月</item>
        <item>6月</item>
        <item>7月</item>
        <item>8月</item>
        <item>9月</item>
        <item>10月</item>
        <item>11月</item>
        <item>12月</item>
    </array>

    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>

    <string name="dairy_of_day_robot_message">本日の記録です。\nトーク画面で記入しましょう。</string>
    <string name="diary_of_day_current_ga_value">最新のGA値: </string>
    <string name="diary_of_day_text_meal">食事</string>
    <string name="diary_of_day_text_motion">運動</string>
    <string name="diary_of_day_text_medicine">お薬</string>

    <!-- API -->
    <string name="url_login_api">URL_LOGIN</string>
</resources>