<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    android:background="@color/main_back_color"
   >

    <TextView
        android:id="@+id/id_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_id"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/id_edit_text"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_edit_text"
        android:hint="@string/login_id_placeholder"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_text" />

    <TextView
        android:id="@+id/pass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_pass"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/id_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/edit_text_pass"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_edit_text"
        android:hint="@string/login_pass_placeholder"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_text" />

    <ImageButton
        android:id="@+id/image_button_visibility"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:padding="10dp"
        android:src="@drawable/ic_visibility_24"
        app:layout_constraintTop_toTopOf="@id/edit_text_pass"
        app:layout_constraintBottom_toBottomOf="@id/edit_text_pass"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button_30dp"
        android:text="@string/login_button_title"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/edit_text_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>